--- a/CarsStore.Web/Views/Shared/_Layout.cshtml
+++ b/CarsStore.Web/Views/Shared/_Layout.cshtml
@@ -17,13 +17,25 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("CarsStore App", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "", Controller = "Home" },null)</li>
+                    <li>@Html.ActionLink("About", "About", "Home", new { area = "", Controller = "Home" }, null)</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "", Controller = "Home" }, null)</li>
+
+                    @if (User.IsInRole("User"))
+                    {
+                        <li>@Html.ActionLink("Add new offer", "AddOffer", "Offers", new { area = "", Controller = "Offers" }, null)</li>
+                    }
+
+                    <li>@Html.ActionLink("Blog", "Articles", "Blog", new { area = "", Controller = "Blog" }, null)</li>
+
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li>@Html.ActionLink("Admin", "Index", "Admin", new { area = "", Controller = "Admin" }, null)</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
