Bug fix and layout improved

--- a/CarsStore.Web/Views/Home/Index.cshtml
+++ b/CarsStore.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <h2>You are looking for a car? This is the right place!</h2>
-<div id="cont"></div>
+<div id="content"></div>
 
 
 
@@ -12,7 +12,7 @@
         $(document)
             .ready(
                 function() {
-                    $("#cont").load("/home/getall");
+                    $("#content").load("/home/getall");
                 });
     </script>
 }
