--- a/CarsStore.Web/Content/Site.css
+++ b/CarsStore.Web/Content/Site.css
@@ -23,6 +23,13 @@ textarea {
     max-width: 280px;
 }
 
-#effect {
-    background: tomato;
+.top-space-row {
+    margin-top: 30px;
+}
+
+.detail-container {
+    margin: 15px;
+    padding-left: 20px;
+    border: 3px solid tomato;
+    border-radius: 40px 0;
 }
