--- a/CarsStore.Web/Views/Offers/AddOffer.cshtml
+++ b/CarsStore.Web/Views/Offers/AddOffer.cshtml
@@ -7,7 +7,7 @@
 {
     <div class="container-fluid">
         <div class="container">
-            <div class="row">
+            <div class="row top-space-row">
                 <div class="form-horizontal">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
@@ -45,10 +45,11 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", rows = "10" } })
+                            <textarea row="10" col="15" name="Description"></textarea>
                             @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                         </div>
                     </div>
+
                     <div class="form-group">
                         @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -56,10 +57,11 @@
                             @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    
+                    <div class="form-group">
                         <input type="Submit" value="Add" class="btn btn-lg btn-primary" />
-                    @Html.ActionLink("Home", "Index","Home",null,new {@class= "btn btn-lg btn-info" })
+                        @Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-lg btn-info" })
                     </div>
+                </div>
             </div>
         </div>
     </div>
