Edit, Delete option added to Admin panel

--- a/CarsStore.Web/Areas/Admin/Views/Roles/ManageUserRoles.cshtml
+++ b/CarsStore.Web/Areas/Admin/Views/Roles/ManageUserRoles.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "ManageUserRoles";
 }
 
@@ -34,7 +35,7 @@
 
 @if (ViewBag.RolesForThisUser != null)
 {
-    <div style="background-color:yellow;">
+    <div style="background-color:tomato;">
         <h3>Roles for this user </h3>
         <ol>
             @foreach (string s in ViewBag.RolesForThisUser)
