--- a/CarsStore.Web/Areas/Admin/Views/Admin/Index.cshtml
+++ b/CarsStore.Web/Areas/Admin/Views/Admin/Index.cshtml
@@ -6,13 +6,11 @@
 
 <h2>Admin area</h2>
 
-@Html.ActionLink("Add offer", "AddOffer", null, new { @class = "btn btn-lg" })
+
 <div class="row">
     <div class="col-md-12">
-        <h2>Manage Roles</h2>
-        @Html.ActionLink("Create new Role", "Create", null, new { @class = "btn btn-lg" })
-        @Html.ActionLink("Edit Role", "Edit", null, new { @class = "btn btn-lg" })
-        @Html.ActionLink("Delete", "Delete", null, new { @class = "btn btn-lg" })
+        <h3>Manage Roles</h3>
+        @Html.ActionLink("Manage Roles", "Index","Roles", null, new { @class = "btn btn-lg btn-primary" })
     </div>
 </div>
 <div class="row">
@@ -29,7 +27,7 @@
                     <td>@Html.DisplayFor(vm => offer.Id)</td>
                     <td>@Html.DisplayFor(vm => offer.Brand)</td>
                     <td>@Html.ActionLink("Edit", "EditOfffer", new { id = offer.Id }, new { @class = "btn btn-lg btn-primary" })</td>
-                    <td>@Html.ActionLink("Delete", "DeleteOfffer", new { id = offer.Id }, new { @class = "btn btn-lg btn-warning" })</td>
+                    <td>@Html.ActionLink("Delete", "DeleteOffer", new { id = offer.Id }, new { @class = "btn btn-lg btn-warning" })</td>
                 </tr>
             }
         </table>
