--- a/CarsStore.Web/Areas/Admin/Views/Roles/Edit.cshtml
+++ b/CarsStore.Web/Areas/Admin/Views/Roles/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Edit";
 }
 
