--- a/CarsStore.Web/Views/Shared/_Layout.cshtml
+++ b/CarsStore.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("CarsStore App", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <i class="fa fa-home" aria-hidden="true"></i>@Html.ActionLink("CarsStore App", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
